--- a/CV_en/CV_en.tex
+++ b/CV_en/CV_en.tex
@@ -25,7 +25,7 @@
 %----------------------------------------------------------------------------------------
 \newcommand{\name}{Eloy Alvarado Narváez}
 \newcommand{\dob}{August 18, 1990}
-\newcommand{\address}{Morris \# 776, Dpto \# 1009 Valparaíso, Chile.}
+\newcommand{\address}{Morris \# 776, Apt. \# 1009 Valparaíso, Chile.}
 \newcommand{\phone}{+56 9 85682232}
 \newcommand{\email}{ealvaradonarvaez@gmail.com}
 \newcommand{\github}{ealvnrz}
@@ -304,8 +304,17 @@ Society}
 \item Presenter, ``\textit{Stochastics differential equations in mathematical finance: The Black-Scholes Model}'', XXI Valparaíso Statistical Week, Valparaíso, Chile, 2015. \\ Organizer: \href{http://www.pucv.cl}{Pontificia Universidad Católica de Valparaíso}
 
 \item Attendant, XIX Valparaíso Statistical Week, Valparaíso, Chile, 2013. \\ Organizer:  \href{http://www.upla.cl}{Universidad de Playa Ancha}
+\end{itemize}
 
 
+\roottitle{\faUserFriends \ References \hrulefill}
+
+\begin{itemize}
+\item Moreno Bevilacqua, Associate professor at Universidad Adolfo Ibañez.  \href{mailto:moreno.bevilacqua@uai.cl}{moreno.bevilacqua@uai.cl}.
+\item Christian Caamaño, Associate professor at Universidad del Bío-Bío. 
+\href{mailto:chcaaman@ubiobio.cl}{chcaaman@ubiobio.cl} 
+\item Carlos Montenegro, Head of the Fisheries Assessment Department at IFOP.
+\href{mailto:carlos.montenegro@ifop.cl}{carlos.montenegro@ifop.cl}
 \end{itemize}
 
 
