--- a/CV_en/CV_en.tex
+++ b/CV_en/CV_en.tex
@@ -1,325 +1,187 @@
-\documentclass[10pt,a4paper]{article}
+%% start of file `template.tex'.
+%% Copyright 2006-2015 Xavier Danaux (xdanaux@gmail.com).
+%
+% This work may be distributed and/or modified under the
+% conditions of the LaTeX Project Public License version 1.3c,
+% available at http://www.latex-project.org/lppl/.
 
 
-%\usepackage[utf8]{inputenc}
+\documentclass[11pt,a4paper,roman]{moderncv}        % possible options include font size ('10pt', '11pt' and '12pt'), paper size ('a4paper', 'letterpaper', 'a5paper', 'legalpaper', 'executivepaper' and 'landscape') and font family ('sans' and 'roman')
+
+% moderncv themes
+\moderncvstyle{classic}                             % style options are 'casual' (default), 'classic', 'banking', 'oldstyle' and 'fancy'
+\moderncvcolor{grey}                               % color options 'black', 'blue' (default), 'burgundy', 'green', 'grey', 'orange', 'purple' and 'red'
+
+  % character encoding
+\usepackage[utf8]{inputenc}                       % if you are not using xelatex ou lualatex, replace by the encoding you are using
 \usepackage[T1]{fontenc}
 %\usepackage{lmodern}
-\usepackage[sfdefault,light]{roboto}
-%sfdefault,light,condensed,thin
+\usepackage[english]{babel}  % FIXME: using spanish breaks moderncv
+\usepackage{bold-extra}
+\usepackage{xcolor}
+\usepackage{lastpage}
+
+\renewcommand{\familydefault}{\rmdefault}         % to set the default font; use '\sfdefault' for the default sans serif font, '\rmdefault' for the default roman one, or any tex font name
+\definecolor{color1}{rgb}{0.52, 0.52, 0.51}
+\setlength{\hintscolumnwidth}{2cm}
+
+\renewcommand*{\sectionfont}{\bfseries\scshape}
+\renewcommand*{\sectionstyle}[1]{{\sectionfont\textcolor{black}{#1}}}
 
 
-\usepackage[spanish]{babel}
-\usepackage{amsmath}
-\usepackage{kotex}
-\usepackage{fontawesome5}
-\usepackage{natbib}
-\usepackage{bibentry}
-\usepackage{graphicx}
+% adjust the page margins
+\usepackage[a4paper, left=1cm, top=2.5cm, bottom=2.5cm, right=1cm]{geometry}
+%\setlength{\hintscolumnwidth}{3cm}                % if you want to change the width of the column with the dates
+%\setlength{\makecvheadnamewidth}{10cm}            % for the 'classic' style, if you want to force the width allocated to your name and avoid line breaks. be careful though, the length is normally calculated to avoid any overlap with your personal info; use this at your own typographical risks...
 
-\include{structure} 
-%\hyphenation{Some-long-word} 
-\begin{document} 
+% personal data
+\name{}{}
+\title{}                               % optional, remove / comment the line if not wanted
+%\address{street and number}{postcode city}{country}% optional, remove / comment the line if not wanted; the "postcode city" and "country" arguments can be omitted or provided empty
+%\phone[mobile]{+1~(234)~567~890}                   % optional, remove / comment the line if not wanted; the optional "type" of the phone can be "mobile" (default), "fixed" or "fax"
+%\phone[fixed]{+2~(345)~678~901}
+%\phone[fax]{+3~(456)~789~012}
+%\email{john@doe.org}                               % optional, remove / comment the line if not wanted
+%\homepage{www.johndoe.com}                         % optional, remove / comment the line if not wanted
+%\social[linkedin]{john.doe}                        % optional, remove / comment the line if not wanted
+%\social[xing]{john\_doe}                           % optional, remove / comment the line if not wanted
+%\social[twitter]{jdoe}                             % optional, remove / comment the line if not wanted
+%\social[github]{jdoe}                              % optional, remove / comment the line if not wanted
+%\social[gitlab]{jdoe}                              % optional, remove / comment the line if not wanted
+%\social[skype]{jdoe}                               % optional, remove / comment the line if not wanted
+%\extrainfo{additional information}                 % optional, remove / comment the line if not wanted
+%\photo[64pt][0.4pt]{picture}                       % optional, remove / comment the line if not wanted; '64pt' is the height the picture must be resized to, 0.4pt is the thickness of the frame around it (put it to 0pt for no frame) and 'picture' is the name of the picture file
+%\quote{Some quote}                                 % optional, remove / comment the line if not wanted
 
-%----------------------------------------------------------------------------------------
-%	NAME AND CONTACT INFORMATION
-%----------------------------------------------------------------------------------------
-\newcommand{\name}{Eloy Alvarado Narváez}
-\newcommand{\dob}{August 18, 1990}
-\newcommand{\address}{Morris \# 776, Apt. \# 1009 Valparaíso, Chile.}
-\newcommand{\phone}{+56 9 85682232}
-\newcommand{\email}{ealvaradonarvaez@gmail.com}
-\newcommand{\github}{ealvnrz}
-\newcommand{\linkedin}{ealvnrz}
-\newcommand{\vertical}{\hspace{5pt}|\hspace{5pt}}
-\newcommand{\gscholarIcon}{\raisebox{-0.1cm}{\includegraphics[height=\baselineskip]{../CV_en/google-scholar.png}}}
+% bibliography adjustements (only useful if you make citations in your resume, or print a list of publications using BibTeX)
+%   to show numerical labels in the bibliography (default is to show no labels)
+%\makeatletter\renewcommand*{\bibliographyitemlabel}{\@biblabel{\arabic{enumiv}}}\makeatother
+\renewcommand*{\bibliographyitemlabel}{\arabic{enumiv}.}
+\renewcommand*\descriptionlabel[1]{\hspace\labelsep\normalfont #1}
+%   to redefine the bibliography heading string ("Publications")
+%\renewcommand{\refname}{Articles}
 
-\begin{center}
-\huge\name \\
-\normalsize PhD candidate and university lecturer \\
-\faHome\ \address \vertical   \faCalendar*[regular]\ \dob \vertical\faIcon{mobile-alt}\ \phone  \\
-\faIcon[regular]{envelope}\ \href{mailto:\email}{\email}
-\vertical \faIcon{github} \ \href{https://github.com/ealvnrz}{\github} \vertical \faIcon{linkedin} \ \href{https://www.linkedin.com/in/ealvnrz/}{\linkedin} \vertical \gscholarIcon \href{https://scholar.google.cl/citations?user=iO2zYZoAAAAJ&hl=es}{Google Scholar} \\
-\end{center}
-
-%\spacedhrule{0.9em}{-0.4em} 
-
-%----------------------------------------------------------------------------------------
-%	SUMMARY SECTION
-%----------------------------------------------------------------------------------------
-
-%\roottitle{Summary} 
-%\vspace{-0.3em} 
-%\noindent Statistician+
-%\spacedhrule{0.5em}{-0.4em} 
-%----------------------------------------------------------------------------------------
-%	EDUCATION SECTION
-%----------------------------------------------------------------------------------------
-
-
-
-\roottitle{\faIcon{graduation-cap} Education \hrulefill } 
-
-
-\headedsection 
-{\href{https://ideuv.uv.cl/index.php/es/?view=page&id=91}{Universidad de Valparaíso}}
-{\textsc{Valparaíso, Chile}}
- {
-\headedsubsection 
-{\textsc{PhD in Statistics}}
-{2018 -- Present}
-{\bodytext{PhD. candidate under the supervision of Prof. Moreno Bevilacqua and Christian Caamaño as co-advisor. \\Thesis title: ``Clayton copula random fields with application to spatial data with bounded support''.}}
-}
-
-%------------------------------------------------
-\headedsection 
-{\href{http://www.korea.ac.kr}{Korea University / 고려대학교 }}
-{\textsc{Seoul, South Korea}}
- {
-\headedsubsection 
-{\textsc{Exchange program}}
-{2014 -- 2014}
-{\bodytext{Relevant courses included: Introduction to Data Mining \& Advanced reading and discussion in English.}}
-}
-
-
-\headedsection 
-{\href{http://www.pucv.cl}{Pontificia Universidad Católica de Valparaíso}}
-{\textsc{Valpara\'iso, Chile}} {
-
-\headedsubsection 
-{Bachelor in Statistics / Statistician }
-{2013 -- 2015}
-{\bodytext{Teaching assistant for introductory and advanced courses (3-4 each semester)\\
-Thesis title: ``\textit{Ecuaciones diferenciales estocásticas con aplicación en matemática financiera: Modelo de Black-Scholes}'' (Stochastic differential equations with applications in mathematical finance: The Black-Scholes model).\ Graduation grade: 6.1 (1-7 scale).}
-\textbf{DREAMS program}: \textit{To Develop Research of Excellence for Advanced Meritorious Students} \ 
-\bodytext{Research assistant under supervision of Prof. Natalia Bahamonde: ARCH models with weighted liquidity.}}
-}
-
-%------------------------------------------------
-
-\headedsection
-{\href{http://www.usm.cl}{Universidad Técnica Federico Santa María}}
-{\textsc{Valparaíso, Chile}} {
-
-\headedsubsection 
-{Mathematical civil engineering, \textnormal{Applied statistics major (discontinued).}}
-{2009 -- 2012} {}
-}
-
-%%\spacedhrule{0.5em}{-0.4em} 
-
-%----------------------------------------------------------------------------------------
-%	TEACHING SECTION
-%----------------------------------------------------------------------------------------
-
-\roottitle{\faUniversity\ Academic Experience \hrulefill}
-
-\headedsection 
-{\href{https://ideuv.uv.cl/}{Instituto de Estadística, Universidad de Valparaíso }}
-{\textsc{Valparaíso, Chile}} {
-\headedsubsection 
-{University Lecturer}
-{August '19 -- Present}
-{\bodytext{Lecturer of several courses for undergraduate programs:\\
- Data Science and Statistical Engineering, Construction Engineering \& Bachelor in Physics.
-  \\ \textbf{Course list}:
-  \begin{itemize}
-  \item IEST 213: Statistical Methods %[2019]
-  \item IEST 322 \& IEST 422: Sampling theory I and II, respectively %[2019,2020,2021]
-  \item IEC 311: Probability and statistics %[2020,2021]
-  \item LFIS 325: Statistics for physical sciences %[2020,2021,2022]
-  \item IECD 325: Linear models and experimental designs. %[2021]
-  \item IECD 411: Machine learning %[2022]
-  \item IECD 414: Time series %[2022]
-  \item IECD 415: Multivariate methods %[2022]
-  \end{itemize}
-  Lecture notes and related codes can be found in personal \href{https://github.com/ealvnrz}{github}.
-}}}
-
-\headedsection 
-{\href{http://www.estadistica.cl}{Instituto de Estadística, Pontificia Universidad Católica de Valparaíso}}
-{\textsc{Valparaíso, Chile}} {
-\headedsubsection % Job title entry for the current employer
-{University teaching workshops}
-{January '18 -- February '18}
-{\bodytext{Organized by  \href{http://innovaciondocente.ucv.cl/}{\textit{Unidad de Mejoramiento de la Docencia Universitaria (UMDU)}}:
-\begin{itemize}
-\item \textit{``Aprendizaje Activo: Diseñando mi clase''} (Active Learning: designing my class)
-\item \textit{``Evaluar y Retroalimentar con apoyo de las TIC''} (Evaluate and provide feedback with support of ICT).
-\end{itemize}
+% bibliography with mutiple entries
+%\usepackage{multibib}
+%\newcites{book,misc}{{Books},{Others}}
+%----------------------------------------------------------------------------------
+%            content
+%----------------------------------------------------------------------------------
+\AtEndPreamble{
+  \hypersetup{
+    colorlinks=false,
+    frenchlinks=false,
+    urlcolor=red,
+    urlbordercolor=cyan,
+    pdfborder = {1 1 1}
 }}
-\headedsubsection 
-{University Lecturer}
-{March '17 -- December '17}
-{\bodytext{Lecturer of introductory statistics courses for undergraduate programs of electrical and electronic engineering.
-}}}
+\nopagenumbers{}
+\renewcommand{\headrulewidth}{0.4pt}
+\usepackage{fancyhdr}
+\pagestyle{fancy}
 
-%----------------------------------------------------------------------------------------
-%	EXPERIENCE SECTION
-%----------------------------------------------------------------------------------------
+\fancyhead[L]{Eloy Alvarado Narváez}
+\fancyhead[R]{\thepage\  of \pageref{LastPage}}
+\begin{document}
+\thispagestyle{empty}
 
-\roottitle{\faIcon{briefcase} Work Experience \hrulefill}
-%------------------------------------------------
-\headedsection 
-{\href{http://www.ifop.cl}{Instituto de Fomento Pesquero}}
-{\textsc{Remote / Valparaíso, Chile}} {
-
-\headedsubsection 
-{External Adviser}
-{July '21 -- Present}
-{\bodytext{Spatio-temporal modeling adviser for the project \textit{``Marine Mammal Bycatch Risk Assessment in Chile''}, funded by San Francisco State University.
-}}}
+{\bfseries \LARGE Eloy Alvarado Narváez}\\
+\href{http://industrias.usm.cl}{Industries Department, Universidad Técnica Federico Santa María}, Santiago, Chile.\\
+\href{mailto:eloy.alvarado@usm.cl}{\texttt{eloy.alvarado@usm.cl}}
 
 
-%------------------------------------------------
-\headedsection 
-{\href{http://www.equifax.com}{Equifax Inc.}}
-{\textsc{Santiago, Chile / Atlanta, USA}} {
+%\makecvtitle
+\section{Employment}
 
-\headedsubsection 
-{Statistical Analyst}
-{April '16 -- February '17}
-{\bodytext{Statistical Analyst for the Data \& Analytics group. In charge of acting as a bridge between statistical analysts in Alpharetta, USA and the software development center in Chile. Among the activities carried out include: validation of attribute creation models, database validation, optimization and support of SAS code, SAS administrator, statistical support within a distributed environment.
-}}}
+\cvitemwithcomment{2023 -- \hfill}{Academic Instructor, \href{http://www.usm.cl}{Universidad Técnica Federico Santa María}}{Santiago, Chile.}
+\cvitemwithcomment{2022 -- 2022}{Lecturer, \href{http://www.usm.cl}{Universidad Técnica Federico Santa María}}{Santiago, Chile.}
+\cvitemwithcomment{2021 -- 2022}{External Adviser, \href{http://www.ifop.cl}{Instituto de Fomento Pesquero}}{Valparaíso, Chile.}
+\cvitemwithcomment{2019 -- 2022}{Lecturer, \href{https://www.uv.cl/}{Universidad de Valparaíso}}{Valparaíso, Chile.}
+\cvitemwithcomment{2017 -- 2017}{Lecturer, \href{http://www.pucv.cl}{Pontificia Universidad Católica de Valparaíso}}{Valparaíso,Chile.}
+\cvitemwithcomment{2016 -- 2017}{Statistical Analyst, \href{http://www.equifax.com}{Equifax Inc.}}{Santiago, Chile. / Atlanta, US.}
 
-%------------------------------------------------
-\headedsection 
-{\href{http://www.banchileinversiones.cl}{Banchile Inversiones}}
-{\textsc{Santiago, Chile}} {
+\section{Education}
+\cvitemwithcomment{2018 -- 2022}{Ph.D. in Statistics, \href{https://www.uv.cl/}{Instituto de Estadística, Universidad de Valparaíso } }{Valparaíso, Chile.}
+\cvitem{}{Advisors: Moreno Bevilacqua and Christian Caamaño}
 
-\headedsubsection 
-{Intership}
-{January '15 -- February '15}
-{\bodytext{Internship in the Business Intelligence division, working in the creation of a predictive
-model to capture new customers of an specific investment product. My work was the
-complete creation of the model using information from the BI databases and the presentation of the results to management.}}}
+\cvitemwithcomment{2013 -- 2015}{Bachelor in Statistics / Statistician, \href{http://www.pucv.cl}{Pontificia Universidad Católica de Valparaíso}}{Valparaíso, Chile.}
+\cvitem{2014}{Exchange program in \href{http://www.korea.ac.kr}{Korea University}}
 
-%----------------------------------------------------------------------------------------
-%	SKILLS SECTION
-%----------------------------------------------------------------------------------------
-
-\roottitle{\faIcon{cog} Skills \hrulefill} 
-
-\headedsubsection 
-{Programming Languages:}
-{}
-{\bodytext{R, Python, C++, \LaTeX, SQL, SAS.}}
-
-
-\headedsubsection 
-{Softwares:}
-{}
-{\bodytext{Tableau, SPSS, STATA, GeoDa, QGIS, MS suite.}}
-
-\headedsubsection 
-{Languages:}
-{}
-{\bodytext{Español/Spanish \textit{(native language)}, English \textit{(Full professional proficiency, TOEFL iBT score: 90, November, 2015)}, Korean/한국어 \textit{(Beginner A2, Korea University)}, French/Français \textit{(Beginner A1, Institut Français).}}}
-
-
-%----------------------------------------------------------------------------------------
-%	RESEARCH AND SCIENTIFIC EVENTS
-%----------------------------------------------------------------------------------------
-
-
-\roottitle{\faIcon[regular]{file-alt}  Research \hrulefill}
-%fix with .bib once published
-
-
-%----------------------------------------------------------------------------------------
-%	RESEARCH AND SCIENTIFIC EVENTS
-%----------------------------------------------------------------------------------------
-
-%----------------------------------------------------------------------------------------
-%	ACCEPTED OR PUBLISHED RESEARCH ARTICLES
-%----------------------------------------------------------------------------------------
-
-\nobibliography{articles}
-\bibliographystyle{unsrt}
-
-\headedsubsection 
-{Accepted or published research article:}{}
-{
-\begin{enumerate}
-\item \bibentry{Stehlik2022}
-
-\item \bibentry{Beltran2022}
-
-\item \bibentry{Beltran2022a}
-
-\item \bibentry{SanzanaLuengo2022}
-
-\end{enumerate}
-}
+\section{Languages}
+\cvitem{Spanish}{Native Speaker}
+\cvitem{English}{Full professional proficiency, \href{https://www.ets.org/toefl.html}{TOEFL iBT} 90 (November, 2015)}
+\cvitem{French}{Beginner A1, \href{https://www.institutofrances.cl}{Institut Français}}
+\cvitem{Korean}{Beginner A2, \href{https://www.korea.edu/}{Korea University}}
 
 
 
+% Publications from a BibTeX file without multibib
+%  for numerical labels: \renewcommand{\bibliographyitemlabel}{\@biblabel{\arabic{enumiv}}}% CONSIDER MERGING WITH PREAMBLE PART
+%  to redefine the heading string ("Publications"): \renewcommand{\refname}{Articles}
+\renewcommand{\refname}{Research Articles}
+\nocite{*}
+\bibliographystyle{plain}
+\bibliography{publications}                        % 'publications' is the name of a BibTeX file
 
-%----------------------------------------------------------------------------------------
-%	UNDER REVIEW
-%----------------------------------------------------------------------------------------
+\section{Under peer review articles}
+\cvitem{1.}{Moreno Bevilacqua, Eloy Alvarado, Christian Caamaño. \textit{``A flexible clayton-like spatial copula with application to bounded support data''}. Journal of Multivariate Analysis.}
+\cvitem{2.}{Víctor Beltrán, Marco Flores, Cristina Sanzana, Fernanda Muñoz, Eloy Alvarado, Bernardo Venegas, Juan Carlos Molina, Alfredo Von Marttens. \textit{``Tooth loss and caries experience of the chilean elderly in the context of the covid-19 pandemic''}. International Journal of Environmental Research and Public Health.}
 
-%\headedsubsection 
-%{Manuscripts under review:}{}
-%{\begin{enumerate}
-%\item 
-%\end{enumerate}
-%}
+\section{Grants and Projects}
 
-%----------------------------------------------------------------------------------------
-%	WORKING ARTICLES
-%----------------------------------------------------------------------------------------
+\cvitem{2018 -- 2022}{National Doctoral Degree, ANID. N° 2018-21180953}
+\cvitem{2020 -- 2020}{Semi-presential technological support platform for urgent and priority dental care for the elderly in the context
+of the COVID-19 pandemic in the Chilean population, ANID, Reference No. COVID0766, Chile. Collaborator}
 
-\headedsubsection 
-{Working papers:}{}
-{\begin{enumerate}
-\item Moreno Bevilacqua, Eloy Alvarado, Christian Caamaño, Fernando Quintana. \textit{``Clayton copula random fields with application to spatial data with bounded support''}. \textit{finishing the manuscript}.
-\item Marco Flores, Eloy Alvarado , Christina Sanzana-Luengo. \textit{``Experience of caries and tooth loss in the chilean elderly population benefited by TEGO project in the context of Covid-19 pandemic.''}. \textit{finishing the manuscript}.
-\item Eloy Alvarado, Héctor Araya and Nicolás Moreno. \textit{``Least square estimation for fractional CIR process with $H>1/2$ and small noise''}.
-\end{enumerate}
-}
+\section{Teaching}
 
-%----------------------------------------------------------------------------------------
-%	GRANTS AND PROJECTS
-%----------------------------------------------------------------------------------------
-\roottitle{\faFileInvoiceDollar \ Grants and projects \hrulefill}
-\begin{itemize}
-\item National Doctoral Degree Scholarship, ANID, 2018. N° 2018-21180953.
-\item \textit{``Semi-presential technological support platform for urgent and
-priority dental care for the elderly in the context of the COVID-19 pandemic in the Chilean population''}, funded by the Rapid Allocation of Funds of the National Agency of Research and
-Development (ANID), Reference No. COVID0766, Chile. Collaborator.
-\end{itemize}
-
-
-
-
-\roottitle{\faComments[regular] Scientific Events \hrulefill}
-\begin{itemize}
-\item Attendant, Data Science Workshop, Remote/Valparaíso, Chile, 2021.\\
-Organizer: \href{https://ideuv.uv.cl/}{Instituto de Estadística, Universidad de Valparaíso}
-
-\item Attendant, XLII National Convention on Statistics, Concepción, Chile, 2015. \\
-Organizer:  \href{http://www.soche.cl}{ Chilean Statistical
-Society}
-\item Presenter, ``\textit{Stochastics differential equations in mathematical finance: The Black-Scholes Model}'', XXI Valparaíso Statistical Week, Valparaíso, Chile, 2015. \\ Organizer: \href{http://www.pucv.cl}{Pontificia Universidad Católica de Valparaíso}
-
-\item Attendant, XIX Valparaíso Statistical Week, Valparaíso, Chile, 2013. \\ Organizer:  \href{http://www.upla.cl}{Universidad de Playa Ancha}
-\end{itemize}
+\cvitem{}{\href{https://www.industrias.usm.cl/}{\textbf{\textsc{Universidad Técnica Federico Santa María}}}}
+\cvitem{2023/01}{ICN 292:  Management Information Systems}
+\cvitem{2023/01}{IND 163C: Business Analytics}
+\cvitem{2022/02}{IND 163C: Business Analytics}
+\cvitem{}{\href{https://www.uv.cl/}{\textbf{\textsc{Universidad de Valparaíso}}}}
+\cvitem{2022/02}{IEST 422: Statistical Quality Control}
+\cvitem{2022/02}{LFIS 325: Statistics for Physical Sciences}
+\cvitem{2022/01}{IECD 411: Machine Learning}
+\cvitem{2022/01}{IEST 414: Time Series}
+\cvitem{2022/01}{IECD 415: Multivariate Methods}
+\cvitem{2021/02}{IECD 325: Linear Models and Experimental Design}
+\cvitem{2021/02}{LFIS 325: Statistics for Physical Sciences}
+\cvitem{2021/02}{IEST 412: Sampling Theory II}
+\cvitem{2021/01}{IEST 322: Sampling Theory I}
+\cvitem{2021/01}{IEST 412: Sampling Theory II}
+\cvitem{2021/01}{IEC 311: Probability and Statistics}
+\cvitem{2020/02}{IEST 322: Sampling Theory I}
+\cvitem{2020/02}{LFIS 325: Statistics for Physical Sciences}
+\cvitem{}{\href{http://www.pucv.cl}{\textbf{\textsc{Pontificia Universidad Católica de Valparaíso}}}}
+\cvitem{2017/02}{EST 205: Probability and Statistics}
+\cvitem{2017/01}{EST 205: Probability and Statistics}
 
 
-\roottitle{\faUserFriends \ References \hrulefill}
-
-\begin{itemize}
-\item Moreno Bevilacqua, Associate professor at Universidad Adolfo Ibañez.  \href{mailto:moreno.bevilacqua@uai.cl}{moreno.bevilacqua@uai.cl}.
-\item Christian Caamaño, Associate professor at Universidad del Bío-Bío. 
-\href{mailto:chcaaman@ubiobio.cl}{chcaaman@ubiobio.cl} 
-\item Carlos Montenegro, Head of the Fisheries Assessment Department at IFOP.
-\href{mailto:carlos.montenegro@ifop.cl}{carlos.montenegro@ifop.cl}
-\end{itemize}
+\section{Advising}
+\cvitem{2022}{Cristóbal Collao. Statistical Engineering. \href{https://www.uv.cl/}{Universidad de Valparaíso}. Co-advisor.}
+\section{Scientific Events}
+\cvitem{2022}{\textit{``A flexible clayton-like spatial copula with application to bounded support data''}. III Statistics Workshop: Graduate Contributions and Scientific initiation. Organizer: \href{https://www.soche.cl}{Chilean Statistical Society}}
+\cvitem{2015}{\textit{``Stochastics differential equations in mathematical finance: The Black-Scholes Model''}. XXI Valparaíso Statistical Week. \href{https://www.pucv.cl}{Pontificia Universidad Católica de Valparaíso}}
 
 
+\section{References}
+\cvlistitem{Moreno Bevilacqua, Associate Professor at \href{https:/www.uai.cl}{Universidad Adolfo Ibañez}.  \href{mailto:moreno.bevilacqua@uai.cl}{\texttt{moreno.bevilacqua@uai.cl}}}
+\cvlistitem{Christian Caamaño, Associate professor at \href{https://www.ubb.cl}{Universidad del Bío-Bío}. \href{mailto:chcaaman@ubiobio.cl}{\texttt{chcaaman@ubiobio.cl}}}
+\cvlistitem{Carlos Montenegro, Head of the Fisheries Research at \href{https://www.ifop.cl}{IFOP}.
+\href{mailto:carlos.montenegro@ifop.cl}{\texttt{carlos.montenegro@ifop.cl}}}
 
-
-
-
+\vfill
+\textit{Updated: January 2023}
+% Publications from a BibTeX file using the multibib package
+%\section{Publications}
+%\nocitebook{book1,book2}
+%\bibliographystylebook{plain}
+%\bibliographybook{publications}                   % 'publications' is the name of a BibTeX file
+%\nocitemisc{misc1,misc2,misc3}
+%\bibliographystylemisc{plain}
+%\bibliographymisc{publications}                   % 'publications' is the name of a BibTeX file
 \end{document}
+
+
+%% end of file `template.tex'.
