--- a/cv_en/cv_en.tex
+++ b/cv_en/cv_en.tex
@@ -20,6 +20,7 @@
 \usepackage{bold-extra}
 \usepackage{xcolor}
 \usepackage{lastpage}
+\usepackage{fontawesome5}
 
 \renewcommand{\familydefault}{\rmdefault}         % to set the default font; use '\sfdefault' for the default sans serif font, '\rmdefault' for the default roman one, or any tex font name
 \definecolor{color1}{rgb}{0.52, 0.52, 0.51}
@@ -34,6 +35,7 @@
 %\setlength{\hintscolumnwidth}{3cm}                % if you want to change the width of the column with the dates
 %\setlength{\makecvheadnamewidth}{10cm}            % for the 'classic' style, if you want to force the width allocated to your name and avoid line breaks. be careful though, the length is normally calculated to avoid any overlap with your personal info; use this at your own typographical risks...
 
+\newcommand{\gscholarIcon}{\raisebox{-0.1cm}{\includegraphics[height=\baselineskip]{google-scholar.png}}}
 % personal data
 \name{}{}
 \title{}                               % optional, remove / comment the line if not wanted
@@ -75,6 +77,7 @@
     urlbordercolor=cyan,
     pdfborder = {1 1 1}
 }}
+
 \nopagenumbers{}
 \renewcommand{\headrulewidth}{0.4pt}
 \usepackage{fancyhdr}
@@ -87,7 +90,12 @@
 
 {\bfseries \LARGE Eloy Alvarado Narváez}\\
 \href{http://industrias.usm.cl}{Industries Department, Universidad Técnica Federico Santa María}, Santiago, Chile.\\
-\href{mailto:eloy.alvarado@usm.cl}{\texttt{eloy.alvarado@usm.cl}}
+Office: TBD\\
+\href{mailto:eloy.alvarado@usm.cl}{\faIcon[regular]{envelope}}
+\href{https://github.com/ealvnrz}{\faIcon{github}}
+\href{https://www.linkedin.com/in/ealvnrz/}{\faIcon{linkedin}}
+\href{https://scholar.google.cl/citations?user=iO2zYZoAAAAJ&hl=es}{\gscholarIcon} 
+\href{https://orcid.org/0000-0001-7522-2327}{\faOrcid}
 
 
 %\makecvtitle
@@ -153,6 +161,10 @@ of the COVID-19 pandemic in the Chilean population, ANID, Reference No. COVID076
 \cvitem{2021/01}{IEC 311: Probability and Statistics}
 \cvitem{2020/02}{IEST 322: Sampling Theory I}
 \cvitem{2020/02}{LFIS 325: Statistics for Physical Sciences}
+\cvitem{2020/01}{IEST 412: Sampling Theory II}
+\cvitem{2020/01}{IEC 311: Probability and Statistics}
+\cvitem{2019/02}{IEST 322: Sampling Theory I}
+\cvitem{2019/02}{IEST 213: Statistical Methods}
 \cvitem{}{\href{http://www.pucv.cl}{\textbf{\textsc{Pontificia Universidad Católica de Valparaíso}}}}
 \cvitem{2017/02}{EST 205: Probability and Statistics}
 \cvitem{2017/01}{EST 205: Probability and Statistics}
