--- a/cv_en/cv_en.tex
+++ b/cv_en/cv_en.tex
@@ -90,7 +90,7 @@
 
 {\bfseries \LARGE Eloy Alvarado Narváez}\\
 \href{http://industrias.usm.cl}{Industries Department, Universidad Técnica Federico Santa María}, Santiago, Chile.\\
-Office: TBD\\
+Office: B-207\\
 \href{mailto:eloy.alvarado@usm.cl}{\faIcon[regular]{envelope}}
 \href{https://github.com/ealvnrz}{\faIcon{github}}
 \href{https://www.linkedin.com/in/ealvnrz/}{\faIcon{linkedin}}
