--- a/cv_en/publications.bib
+++ b/cv_en/publications.bib
@@ -1,18 +1,22 @@
-%% start of file `publications.bib'.
-%% Copyright 2006-2012 Xavier Danaux (xdanaux at gmail.com).
-%
-% This work may be distributed and/or modified under the
-% conditions of the LaTeX Project Public License version 1.3c,
-% available at http://www.latex-project.org/lppl/.
-
-
-@Article{Stehlik2022,
-  author    = {Stehl{\'\i}k, M and Kisel'{\'a}k, J and Dinamarca, A and Alvarado, E and Plaza, F and Medina, FA and Stehl{\'\i}kov{\'a}, S and Marek, J and Venegas, B and Gajdo{\v{s}}, A and others},
-  journal   = {Stochastic Analysis and Applications},
-  title     = {REDACS: Regional emergency-driven adaptive cluster sampling for effective COVID-19 management},
-  year      = {2022},
-  pages     = {1--35},
-  publisher = {Taylor \& Francis},
+@Article{Beltran2023,
+  author    = {Beltrán, Víctor and Flores, Marco and Sanzana, Cristina and Muñoz-Sepúlveda, Fernanda and Alvarado, Eloy and Venegas, Bernardo and Molina, Juan Carlos and Rueda-Velásquez, Sandra and von Marttens, Alfredo},
+  journal   = {International Journal of Environmental Research and Public Health},
+  title     = {Tooth {Loss} and {Caries} {Experience} of {Elderly} {Chileans} in the {Context} of the {COVID}-19 {Pandemic} in {Five} {Regions} of {Chile}},
+  year      = {2023},
+  issn      = {1660-4601},
+  month     = jan,
+  number    = {4},
+  pages     = {3001},
+  volume    = {20},
+  abstract  = {Risk factors associated with tooth loss have been studied; however, the current status of the epidemiological profiles and the impact of the pandemic on the oral health of the elderly is still unknown. This study aims to determine the experience of caries and tooth loss among elderly Chilean citizens in five regions and to identify the risk factors associated with tooth loss. The sample includes 135 participants over 60 years old assessed during COVID-19 lockdown. Sociodemographic variables such as education and RSH (Social Registry of Households) were obtained through a teledentistry platform called TEGO. The history of chronic diseases such as diabetes, obesity, depression and dental caries reported by DMFT index scores were incorporated. The statistical analysis included Adjusted Odds Ratios (ORs) to assess risk factors associated with the lack of functional dentition. Multivariate hypothesis testing was used to compare the mean equality of DMFT and its components between regions (p-value {\textless} 0.05). Individuals with RSH ≤ 40\% were at higher risk of having no functional dentition with OR 4.56 (95\% CI: 1.71, 12.17). The only mean difference between regions was the filled tooth component. Tooth loss was associated with multidimensional lower income, where the elderly belonging to the 40\% most vulnerable population had a higher prevalence of non-functional dentition. This study highlights the importance of implementing a National Oral Health Policy that focuses on oral health promotion and minimally invasive dentistry for the most vulnerable population.},
+  copyright = {http://creativecommons.org/licenses/by/3.0/},
+  doi       = {10.3390/ijerph20043001},
+  file      = {Full Text PDF:https\://www.mdpi.com/1660-4601/20/4/3001/pdf?version=1676028486:application/pdf},
+  keywords  = {tooth loss, caries experience, edentulism, elderly},
+  language  = {en},
+  publisher = {Multidisciplinary Digital Publishing Institute},
+  url       = {https://www.mdpi.com/1660-4601/20/4/3001},
+  urldate   = {2023-02-25},
 }
 
 @Article{Beltran2022,
@@ -33,7 +37,7 @@
   pages     = {1--8},
   publisher = {Universidad de Concepci{\'o}n},
 }
-
+ 
 @Article{SanzanaLuengo2022,
   author  = {Sanzana-Luengo, Cristina and D{\'\i}az, Leonardo and Abarza, Liliann and Alvarado, Eloy and Beltr{\'a}n, V{\'\i}ctor},
   journal = {Journal of Oral Research},
@@ -42,7 +46,32 @@
   pages   = {1--8},
 }
 
+%% start of file `publications.bib'.
+%% Copyright 2006-2012 Xavier Danaux (xdanaux at gmail.com).
+%
+% This work may be distributed and/or modified under the
+% conditions of the LaTeX Project Public License version 1.3c,
+% available at http://www.latex-project.org/lppl/.
+
+
+@Article{Stehlik2022,
+  author    = {Stehl{\'\i}k, M and Kisel'{\'a}k, J and Dinamarca, A and Alvarado, E and Plaza, F and Medina, FA and Stehl{\'\i}kov{\'a}, S and Marek, J and Venegas, B and Gajdo{\v{s}}, A and others},
+  journal   = {Stochastic Analysis and Applications},
+  title     = {REDACS: Regional emergency-driven adaptive cluster sampling for effective COVID-19 management},
+  year      = {2022},
+  pages     = {1--35},
+  publisher = {Taylor \& Francis},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
+@Comment{jabref-meta: saveActions:disabled;
+all-text-fields[identity]
+date[normalize_date]
+month[normalize_month]
+pages[normalize_page_numbers]
+;}
+
+@Comment{jabref-meta: saveOrderConfig:original;citationkey;false;author;false;year;true;title;false;}
 
 %% end of file `publications.bib'.
