--- a/cv_en/cv_en.tex
+++ b/cv_en/cv_en.tex
@@ -12,7 +12,7 @@
 \moderncvstyle{classic}                             % style options are 'casual' (default), 'classic', 'banking', 'oldstyle' and 'fancy'
 \moderncvcolor{grey}                               % color options 'black', 'blue' (default), 'burgundy', 'green', 'grey', 'orange', 'purple' and 'red'
 
-  % character encoding
+% character encoding
 \usepackage[utf8]{inputenc}                       % if you are not using xelatex ou lualatex, replace by the encoding you are using
 \usepackage[T1]{fontenc}
 %\usepackage{lmodern}
@@ -127,13 +127,14 @@ Office: B-207\\
 %  for numerical labels: \renewcommand{\bibliographyitemlabel}{\@biblabel{\arabic{enumiv}}}% CONSIDER MERGING WITH PREAMBLE PART
 %  to redefine the heading string ("Publications"): \renewcommand{\refname}{Articles}
 \renewcommand{\refname}{Research Articles}
+\bibliographystyle{unsrt}
 \nocite{*}
-\bibliographystyle{plain}
 \bibliography{publications}                        % 'publications' is the name of a BibTeX file
 
+\newpage
 \section{Under peer review articles}
+
 \cvitem{1.}{Moreno Bevilacqua, Eloy Alvarado, Christian Caamaño. \textit{``A flexible clayton-like spatial copula with application to bounded support data''}. Journal of Multivariate Analysis.}
-\cvitem{2.}{Víctor Beltrán, Marco Flores, Cristina Sanzana, Fernanda Muñoz, Eloy Alvarado, Bernardo Venegas, Juan Carlos Molina, Alfredo Von Marttens. \textit{``Tooth loss and caries experience of the chilean elderly in the context of the covid-19 pandemic''}. International Journal of Environmental Research and Public Health.}
 
 \section{Grants and Projects}
 
@@ -143,7 +144,7 @@ of the COVID-19 pandemic in the Chilean population, ANID, Reference No. COVID076
 
 \section{Teaching}
 
-\cvitem{}{\href{https://www.industrias.usm.cl/}{\textbf{\textsc{Universidad Técnica Federico Santa María}}}}
+\cvitem{}{\href{https://www.usm.cl/}{\textbf{\textsc{Universidad Técnica Federico Santa María}}}}
 \cvitem{2023/01}{ICN 292:  Management Information Systems}
 \cvitem{2023/01}{IND 163C: Business Analytics}
 \cvitem{2022/02}{IND 163C: Business Analytics}
@@ -184,7 +185,7 @@ of the COVID-19 pandemic in the Chilean population, ANID, Reference No. COVID076
 \href{mailto:carlos.montenegro@ifop.cl}{\texttt{carlos.montenegro@ifop.cl}}}
 
 \vfill
-\textit{Updated: January 2023}
+\textit{Updated: February 2023}
 % Publications from a BibTeX file using the multibib package
 %\section{Publications}
 %\nocitebook{book1,book2}
