--- a/cv_en/cv_en.tex
+++ b/cv_en/cv_en.tex
@@ -132,9 +132,9 @@ Office: B-207\\
 \bibliography{publications}                        % 'publications' is the name of a BibTeX file
 
 \newpage
-\section{Under peer review articles}
+%\section{Under peer review articles}
 
-\cvitem{1.}{Moreno Bevilacqua, Eloy Alvarado, Christian Caamaño. \textit{``A flexible clayton-like spatial copula with application to bounded support data''}. Journal of Multivariate Analysis.}
+%\cvitem{1.}{Moreno Bevilacqua, Eloy Alvarado, Christian Caamaño. \textit{``A flexible clayton-like spatial copula with application to bounded support data''}. Journal of Multivariate Analysis.}
 
 \section{Grants and Projects}
 
