--- a/cv_en/publications.bib
+++ b/cv_en/publications.bib
@@ -1,3 +1,10 @@
+@article{bevilacqua2023flexible,
+  title={A flexible Clayton-like spatial copula with application to bounded support data},
+  author={Bevilacqua, Moreno and Alvarado, Eloy and Caama{\~n}o-Carrillo, Christian},
+  journal={arXiv preprint arXiv:2305.18166},
+  year={2023}
+}
+
 @Article{Beltran2023,
   author    = {Beltrán, Víctor and Flores, Marco and Sanzana, Cristina and Muñoz-Sepúlveda, Fernanda and Alvarado, Eloy and Venegas, Bernardo and Molina, Juan Carlos and Rueda-Velásquez, Sandra and von Marttens, Alfredo},
   journal   = {International Journal of Environmental Research and Public Health},
