--- a/cv_en/cv_en.tex
+++ b/cv_en/cv_en.tex
@@ -89,7 +89,7 @@
 \thispagestyle{empty}
 
 {\bfseries \LARGE Eloy Alvarado Narváez}\\
-\href{http://industrias.usm.cl}{Industries Department, Universidad Técnica Federico Santa María}, Santiago, Chile.\\
+\href{http://industrias.usm.cl}{Departmento de Industrias, Universidad Técnica Federico Santa María}, Santiago, Chile.\\
 Office: B-207\\
 \href{mailto:eloy.alvarado@usm.cl}{\faIcon[regular]{envelope}}
 \href{https://github.com/ealvnrz}{\faIcon{github}}
@@ -145,6 +145,7 @@ of the COVID-19 pandemic in the Chilean population, ANID, Reference No. COVID076
 \section{Teaching}
 
 \cvitem{}{\href{https://www.usm.cl/}{\textbf{\textsc{Universidad Técnica Federico Santa María}}}}
+\cvitem{2023/02}{PII 402: Stochastics Processes}
 \cvitem{2023/01}{ICN 292:  Management Information Systems}
 \cvitem{2023/01}{IND 163C: Business Analytics}
 \cvitem{2022/02}{IND 163C: Business Analytics}
@@ -185,7 +186,7 @@ of the COVID-19 pandemic in the Chilean population, ANID, Reference No. COVID076
 \href{mailto:carlos.montenegro@ifop.cl}{\texttt{carlos.montenegro@ifop.cl}}}
 
 \vfill
-\textit{Updated: February 2023}
+\textit{Updated: July 2023}
 % Publications from a BibTeX file using the multibib package
 %\section{Publications}
 %\nocitebook{book1,book2}
