--- a/cv_en/cv_en.tex
+++ b/cv_en/cv_en.tex
@@ -97,7 +97,6 @@ Office: B-207\\
 \href{https://scholar.google.cl/citations?user=iO2zYZoAAAAJ&hl=es}{\gscholarIcon} 
 \href{https://orcid.org/0000-0001-7522-2327}{\faOrcid}
 
-
 %\makecvtitle
 \section{Employment}
 
@@ -131,13 +130,13 @@ Office: B-207\\
 \nocite{*}
 \bibliography{publications}                        % 'publications' is the name of a BibTeX file
 
-\newpage
 %\section{Under peer review articles}
 
 %\cvitem{1.}{Moreno Bevilacqua, Eloy Alvarado, Christian Caamaño. \textit{``A flexible clayton-like spatial copula with application to bounded support data''}. Journal of Multivariate Analysis.}
 
 \section{Grants and Projects}
 
+\cvitem{2023 -- 2024}{Modeling and estimating massive point referenced spatial data, MATH-AMSUD AMSUD220041. Research Associate.}
 \cvitem{2018 -- 2022}{National Doctoral Degree, ANID. N° 2018-21180953}
 \cvitem{2020 -- 2020}{Semi-presential technological support platform for urgent and priority dental care for the elderly in the context
 of the COVID-19 pandemic in the Chilean population, ANID, Reference No. COVID0766, Chile. Collaborator}
@@ -145,7 +144,7 @@ of the COVID-19 pandemic in the Chilean population, ANID, Reference No. COVID076
 \section{Teaching}
 
 \cvitem{}{\href{https://www.usm.cl/}{\textbf{\textsc{Universidad Técnica Federico Santa María}}}}
-\cvitem{2023/02}{PII 402: Stochastics Processes}
+\cvitem{2023/02}{PII 402: Stochastics Processes (Postgraduate)}
 \cvitem{2023/01}{ICN 292:  Management Information Systems}
 \cvitem{2023/01}{IND 163C: Business Analytics}
 \cvitem{2022/02}{IND 163C: Business Analytics}
@@ -182,11 +181,11 @@ of the COVID-19 pandemic in the Chilean population, ANID, Reference No. COVID076
 \section{References}
 \cvlistitem{Moreno Bevilacqua, Associate Professor at \href{https:/www.uai.cl}{Universidad Adolfo Ibañez}.  \href{mailto:moreno.bevilacqua@uai.cl}{\texttt{moreno.bevilacqua@uai.cl}}}
 \cvlistitem{Christian Caamaño, Associate professor at \href{https://www.ubb.cl}{Universidad del Bío-Bío}. \href{mailto:chcaaman@ubiobio.cl}{\texttt{chcaaman@ubiobio.cl}}}
-\cvlistitem{Carlos Montenegro, Head of the Fisheries Research at \href{https://www.ifop.cl}{IFOP}.
+\cvlistitem{Carlos Montenegro, Head of Fisheries Research at \href{https://www.ifop.cl}{IFOP}.
 \href{mailto:carlos.montenegro@ifop.cl}{\texttt{carlos.montenegro@ifop.cl}}}
 
 \vfill
-\textit{Updated: July 2023}
+\textit{Updated: September 2023}
 % Publications from a BibTeX file using the multibib package
 %\section{Publications}
 %\nocitebook{book1,book2}
