--- a/cv_en/cv_en.tex
+++ b/cv_en/cv_en.tex
@@ -144,7 +144,7 @@ of the COVID-19 pandemic in the Chilean population, ANID, Reference No. COVID076
 \section{Teaching}
 
 \cvitem{}{\href{https://www.usm.cl/}{\textbf{\textsc{Universidad Técnica Federico Santa María}}}}
-\cvitem{2023/02}{PII 402: Stochastics Processes (Postgraduate)}
+\cvitem{2023/02}{PII 402: Stochastic Processes (Postgraduate)}
 \cvitem{2023/01}{ICN 292:  Management Information Systems}
 \cvitem{2023/01}{IND 163C: Business Analytics}
 \cvitem{2022/02}{IND 163C: Business Analytics}
@@ -174,6 +174,7 @@ of the COVID-19 pandemic in the Chilean population, ANID, Reference No. COVID076
 \section{Advising}
 \cvitem{2022}{Cristóbal Collao. Statistical Engineering. \href{https://www.uv.cl/}{Universidad de Valparaíso}. Co-advisor.}
 \section{Scientific Events}
+\cvitem{2023}{\textit{``Retroalimentación basada en IA para estudiantes de Ingeniería''}. XXXV Chilean Congress of Engineering Education. Organizer: \href{https://www.sochedi.cl}{Chilean Society of Engineering Education}}
 \cvitem{2022}{\textit{``A flexible clayton-like spatial copula with application to bounded support data''}. III Statistics Workshop: Graduate Contributions and Scientific initiation. Organizer: \href{https://www.soche.cl}{Chilean Statistical Society}}
 \cvitem{2015}{\textit{``Stochastics differential equations in mathematical finance: The Black-Scholes Model''}. XXI Valparaíso Statistical Week. \href{https://www.pucv.cl}{Pontificia Universidad Católica de Valparaíso}}
 
@@ -185,7 +186,7 @@ of the COVID-19 pandemic in the Chilean population, ANID, Reference No. COVID076
 \href{mailto:carlos.montenegro@ifop.cl}{\texttt{carlos.montenegro@ifop.cl}}}
 
 \vfill
-\textit{Updated: September 2023}
+\textit{Updated: October 2023}
 % Publications from a BibTeX file using the multibib package
 %\section{Publications}
 %\nocitebook{book1,book2}
